--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ on:
 
 # 环境变量
 env:
-  # Docker Hub 用户名（从 secrets 获取）
-  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  # Docker 镜像名称
-  IMAGE_NAME: jpa-demo
+  # GitHub Container Registry
+  REGISTRY: ghcr.io
+  # 镜像名称（使用 GitHub 用户名/仓库名）
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   # -----------------------------------------
@@ -115,18 +115,20 @@ jobs:
       - name: 🔧 Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 步骤3: 登录 Docker Hub（使用 shell 命令以获得更详细的错误信息）
-      - name: 🔐 Login to Docker Hub
-        run: |
-          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        shell: bash
+      # 步骤3: 登录 GitHub Container Registry
+      - name: 🔐 Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # 步骤4: 提取元数据（标签、版本等）
       - name: 📋 Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest
             type=sha,prefix=
